Fixed weird chug modal spacing

--- a/src/app/components/chug-modal/chug-modal.component.scss
+++ b/src/app/components/chug-modal/chug-modal.component.scss
@@ -23,9 +23,11 @@
   .best {
     color: #666;
     margin-top: 0px;
+    margin-bottom: 0px;
   }
 
   button {
+    margin-top: 50px;
     font-size: 36px;
     padding: 10px;
     text-transform: uppercase;
